[gd_scene load_steps=38 format=2]

[ext_resource path="res://Character/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/Enemy/Skeleton/Skeleton.gd" type="Script" id=2]
[ext_resource path="res://Character/Enemy/Skeleton/assets/Idle.png" type="Texture" id=3]
[ext_resource path="res://Character/Enemy/Skeleton/assets/Walk.png" type="Texture" id=4]
[ext_resource path="res://Character/Enemy/Skeleton/assets/Attack.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=18]
resource_name = "attack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordBox/SwordCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=19]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=20]
resource_name = "walk"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/attack/node = SubResource( 21 )
states/attack/position = Vector2( 539, 143 )
states/idle/node = SubResource( 22 )
states/idle/position = Vector2( 334, 143 )
states/walk/node = SubResource( 23 )
states/walk/position = Vector2( 342, 237 )
transitions = [ "idle", "attack", SubResource( 24 ), "attack", "idle", SubResource( 25 ), "walk", "idle", SubResource( 26 ), "idle", "walk", SubResource( 27 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 35.9866, 17.3182 )

[sub_resource type="CircleShape2D" id=31]
radius = 194.554

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 68.4134, 26.3253 )

[node name="Skeleton" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Body" parent="Position2D" index="0"]
position = Vector2( 0.28997, -26.4252 )
frames = SubResource( 17 )
animation = "walk"
frame = 2
playing = true

[node name="AnimationPlayer" parent="Position2D/Body" index="0"]
autoplay = "idle"
anims/attack = SubResource( 18 )
anims/idle = SubResource( 19 )
anims/walk = SubResource( 20 )

[node name="AnimationTree" type="AnimationTree" parent="Position2D/Body" index="1"]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 29 )

[node name="SwordBox" type="Area2D" parent="Position2D/Body" index="2"]

[node name="SwordCollider" type="CollisionShape2D" parent="Position2D/Body/SwordBox" index="0"]
position = Vector2( 38.4717, -0.15749 )
shape = SubResource( 30 )
disabled = true

[node name="DetectRange" type="Area2D" parent="Position2D/Body" index="3"]

[node name="DetectCollider" type="CollisionShape2D" parent="Position2D/Body/DetectRange" index="0"]
shape = SubResource( 31 )

[node name="AttackRange" type="Area2D" parent="Position2D/Body" index="4"]

[node name="AttackCollider" type="CollisionShape2D" parent="Position2D/Body/AttackRange" index="0"]
shape = SubResource( 32 )

[node name="Shadow" parent="Position2D" index="1"]
position = Vector2( 0.222748, -8.90898 )
scale = Vector2( 2.20643, 1 )

[node name="Feet" parent="." index="1"]
position = Vector2( -0.164367, -9.62895 )
[connection signal="area_entered" from="Position2D/Body/SwordBox" to="." method="_on_SwordBox_area_entered"]
[connection signal="body_entered" from="Position2D/Body/DetectRange" to="." method="_on_DetectRange_body_entered"]
[connection signal="body_exited" from="Position2D/Body/DetectRange" to="." method="_on_DetectRange_body_exited"]
[connection signal="body_entered" from="Position2D/Body/AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="Position2D/Body/AttackRange" to="." method="_on_AttackRange_body_exited"]
